modifying accrding to deploy

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,2 @@
 PORT=4545
-HOST=localhost
-MONGO_CONNECTION=mongodb://127.0.0.1:27017/flavour_fiesta_db
+MONGO_URI=mongodb+srv://kambojlavanya076_db_user:kamboj123456789@cluster0.ex2aphe.mongodb.net/flavourfiesta
